# ProjectNotes

./: .gitignore  .qmake.stash  .readthedocs.yaml  AGENTS.md  AppIcon.icns  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FilterSaveStructure.h  Gettinghelp.md  Github Site.md  Makefile  ProjectNotes.pro  ProjectNotes3.pro  ProjectNotes3.pro.user.21e357c  ProjectNotes3.pro.user.c2ea5e4  ProjectNotes3.pro.user.fa1bc83  QLogger.cpp  QLogger.h  QLoggerLevel.h  QLoggerWriter.cpp  QLoggerWriter.h  README.md  Resources.qrc  Systemrequirements.md  Wiki.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  actionitemprojectnotesmodel.cpp  actionitemprojectnotesmodel.h  actionitemsdetailsmeetingsmodel.cpp  actionitemsdetailsmeetingsmodel.h  allitemspage.cpp  allitemspage.h  allitemsview.cpp  allitemsview.h  appsettings.cpp  appsettings.h  basepage.cpp  (+260 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement_request.yml  question.yml
.github/workflows/: flatpak-release.yml  pages.yml
.qtcreator/: CMakeLists.txt.user.22de3e4
ProjectNotesCore/: CMakeLists.txt
ProjectNotesDesktop/: CMakeLists.txt  DesktopAppController.cpp  DesktopAppController.h  FolderManager.cpp  FolderManager.h  SpellCheck.cpp  SpellCheck.h  main.cpp
ProjectNotesDesktop/qml/: AppMenu.qml  Card.qml  ComboField.qml  DateField.qml  FilterDialog.qml  FolderGroup.qml  FormField.qml  IconRail.qml  Main.qml  MaterialIcon.qml  NoteFormatToolbar.qml  ProjectSidebar.qml  RecordContextMenu.qml  Theme.qml  TopBar.qml
ProjectNotesDesktop/qml/pages/: ClientDetailPage.qml  ClientsPage.qml  ItemDetailPage.qml  ItemsPage.qml  PeoplePage.qml  PersonDetailPage.qml  ProjectDetailPage.qml  ProjectNoteDetailPage.qml  ProjectsListPage.qml  SearchPage.qml  SettingsPage.qml  StubPage.qml
ProjectNotesMobile/: AppController.cpp  AppController.h  CMakeLists.txt  MailComposer.h  MailComposer.mm  MobileSettings.cpp  MobileSettings.h  TextFormatter.cpp  TextFormatter.h  main.cpp
ProjectNotesMobile/ios/: Info.plist  LaunchScreen.storyboard
ProjectNotesMobile/ios/Assets.xcassets/: Contents.json
ProjectNotesMobile/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ProjectNotesMobile/qml/: FieldRow.qml  FormField.qml  FormLabel.qml  Main.qml  Theme.qml
ProjectNotesMobile/qml/pages/: AboutPage.qml  AllItemsPage.qml  ClientDetailPage.qml  ClientsPage.qml  DateFieldRow.qml  DatePickerPopup.qml  FontPickerPopup.qml  MeetingAttendeeDetailPage.qml  MeetingAttendeesPage.qml  NoteActionItemsPage.qml  NoteFormatSheet.qml  PeoplePage.qml  PersonDetailPage.qml  PreferencesPage.qml  ProjectDetailsPage.qml  ProjectLocationDetailPage.qml  ProjectLocationsPage.qml  ProjectNoteDetailPage.qml  ProjectNotesPage.qml  ProjectTrackerPage.qml  ProjectsListPage.qml  StatusItemDetailPage.qml  StatusItemsPage.qml  SyncSettingsPage.qml  TeamMemberDetailPage.qml  TeamMembersPage.qml  TrackerItemCommentDetailPage.qml  TrackerItemCommentsPage.qml  TrackerItemDetailPage.qml  ViewOptionsPage.qml
database/: ProjectNotes.db  pnconsoledialog.cpp  pnconsoledialog.h  pnconsoledialog.ui
dictionary/: en_GB.aff  en_GB.dic  es_ANY.aff  es_ANY.dic  index.ini
docs/: ActionItemDetailPage.md  AddingFunctionality.md  ClientListPage.md  EarnedValueTerms.md  EditMenu.md  FileMenu.md  FilterTool.md  GettingStarted.md  GlobalSettings.md  HistoryMenu.md  Home.md  ImportingandExportingOutlookCont.md  ItemTrackerPanel.md  MeetingNotesArchive.md  NotesPage.md  OpenEditor.md  OverviewofPlugins.md  Overviewoftheuserinterface.md  PeopleListPage.md  PluginSettings.md  PluginsMenu.md  PowerPointTemplates.md  Preferences.md  PresentingToClients.md  Project Notes.md  ProjectEmailArchive.md  ProjectListPage.md  ProjectNotesXML.md  ProjectPage.md  ScheduleaCustomerKickoffMeeting.md  ScheduleaCustomerLessonsLearnedM.md  ScheduleaCustomerStatusMeeting.md  ScheduleanInternalKickoffMeeting.md  ScheduleanInternalLessonsLearned.md  ScheduleanInternalStatusMeeting.md  SearchPage.md  SendMeetingNotes.md  SendProjectEmails.md  SortingandSizingColumns.md  StandardPlugins.md  (+5 more)
docs/InterfaceOverview/: ActionItemDetailPage.md  ClientListPage.md  EarnedValueTerms.md  EditMenu.md  ErrorLog.md  FileMenu.md  FilterTool.md  HelpMenu.md  HistoryMenu.md  ItemTrackerPage.md  MasterItemListPage.md  NotesPage.md  PeopleListPage.md  PluginsMenu.md  Preferences.md  PresentingToClients.md  ProjectListPage.md  ProjectPage.md  RemoteHost.md  SearchPage.md  SortingandSizingColumns.md  Toolbar.md  ViewMenu.md
docs/Introduction/: CloudSync_Neon.md  CloudSync_SelfHosted.md  CloudSync_Supabase.md  DeveloperProfile.md  GettingStarted.md  InstallLinux.md  SystemRequirements.md
docs/Mobile/: ProjectNotesMobile.md
docs/PluginsOverview/: AddingFunctionality.md  DataTypes.md  (+1 more)
help/: Project Notes Help.hnd
plugins/: TestExcel.xlsx  archivenotes_plugin.py  base_plugin.py  base_plugin_settings.py  cci_connectdrives_plugin.py  cci_ifs_projects_import_plugin.py  cci_ifs_projects_statusreport_plugin.py  cci_scheduleoneonone_plugin.py  cci_scheduleoneononeattendee_plugin.py  cci_scheduleoneononeteam_plugin.py  contactexport_plugin.py  contactimport_plugin.py  copy_email_member_plugin.py  copy_email_plugin.py  copy_filepath_plugin.py  editor_plugin.py  email_as_attachment_plugin.py  emailarchive_plugin.py  examplemeeting.xml  exampleproject.xml  excelkill_plugin.py  exportnotes_plugin.py  exportstatusreport_plugin.py  exporttrackeritems_plugin.py  findprojectemailperson_plugin.py  globalsettings_plugin.py  ifs_cloud_projectsstatusreportfixed_plugin.py  ifs_cloud_settings_plugin.py  ifs_project_report_plugin.py  ifs_ssrs_generate_plugin.py  ifscloud_plugin_settings.py  myshortcuts_plugin.py  newchangeorder_plugin.py  newmsproject_plugin.py  newpcrregistry_plugin.py  newpowerpoint_plugin.py  newriskregister_plugin.py  open_msproject_plugin.py  outlooksync_plugin.py  paul_cleanpc_plugin.py  (+19 more)
site/: 404.html  index.html  styles.css
tests/: test_icloud_tools.py
threads/: filefinder_thread.py  icloudsync_thread.py  ifssync_thread.py  outlooksync_thread.py  tester_thread_1.py
(+118 files in other folders)
